comment download resume

--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
 		}
 	</style>
 		</section> -->
-		<section class="section">
+		<!-- <section class="section">
 			<h2>Resume</h2>
 			<a href="resume.pdf" class="resume-btn" download>Download My Resume (PDF)</a>
-		</section>
+		</section> -->
 		<section class="section contact">
 			<h2>Contact</h2>
 			<form class="contact-form" action="mailto:your.email@example.com" method="POST" enctype="text/plain">
