--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Man Ho (Zenkio) Fung — Software Engineer</title>
+    <title>Zenkio Fung — Senior Software Engineer</title>
   </head>
   <body class="min-h-screen bg-zinc-50 dark:bg-zinc-950">
     <div id="root"></div>
