--- a/index.html
+++ b/index.html
@@ -4,16 +4,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Zenkio Fung's personal website and portfolio.">
+
     <meta name="keywords" content="zenkio, fung, zenkio fung, portfolio, software engineer, web developer, blog, github pages">
     <meta name="author" content="Zenkio Fung">
-    <meta property="og:title" content="Zenkio Fung | Portfolio" />
-    <meta property="og:description" content="Showcasing my projects and experience." />
-    <meta property="og:image" content="https://zenkio.github.io/preview.png" />
-    <meta property="og:url" content="https://zenkio.github.io" />
-    <meta name="twitter:card" content="summary_large_image" />
+    <!-- HTML Meta Tags -->
+    <title>Zenkio Fung | Senior Software Engineer</title>
+    <meta name="description" content="Zenkio Fung's personal website and portfolio.">
 
-    <title>Zenkio Fung — Senior Software Engineer</title>
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://zenkio.github.io">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Zenkio Fung | Senior Software Engineer">
+    <meta property="og:description" content="Zenkio Fung's personal website and portfolio.">
+    <meta property="og:image" content="https://zenkio.github.io/preview.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="zenkio.github.io">
+    <meta property="twitter:url" content="https://zenkio.github.io">
+    <meta name="twitter:title" content="Zenkio Fung | Senior Software Engineer">
+    <meta name="twitter:description" content="Zenkio Fung's personal website and portfolio.">
+    <meta name="twitter:image" content="https://zenkio.github.io/preview.png">
   </head>
   <body class="min-h-screen bg-zinc-50 dark:bg-zinc-950">
     <div id="root"></div>
